# app-jokes

./: README.md  dump.rdb  helpful.txt  pyproject.toml
jokes_proj/: celerybeat-schedule  db.sqlite3  dump.rdb  manage.py
jokes_proj/jokes/: consumers.py  jokes.txt  routing.py  tasks.py
jokes_proj/jokes_proj/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
jokes_proj/templates/: index.html
