[tool.poetry]
name = "app-jokes"
version = "0.1.0"
description = ""
authors = ["SAI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
requests = "^2.31.0"
celery = {extras = ["redis"], version = "^5.3.6"}
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
